xatolar deyarli tuzatildi

--- a/html/examples.html
+++ b/html/examples.html
@@ -83,43 +83,25 @@
               </div>
             </section>
       <div class="main_container example_main_container">
-        <div class="tab d-flex justify-content-center align-items-center"><a class="active" href="#">Работа аваркомов</a><a href="#">Ремонт после ДТП </a></div>
+        <div class="tab d-flex justify-content-center align-items-center"><a class="active" href="#">Работа аваркомов</a><a href="#accident">Ремонт после ДТП </a></div>
         <div class="swiper card_1"> 
           <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="card_content"> <img src="./images/example_slide_1.png" alt="">
-                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="card_content"> <img src="./images/example_slide_1.png" alt="">
-                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="card_content"> <img src="./images/example_slide_1.png" alt="">
-                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="card_content"> <img src="./images/example_slide_1.png" alt="">
-                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="card_content"> <img src="./images/example_slide_1.png" alt="">
-                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="card_content"> <img src="./images/example_slide_1.png" alt="">
-                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div>
-              </div>
-            </div>
+            <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_1.png" alt="">
+                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div></a></div>
+            <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_1.png" alt="">
+                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div></a></div>
+            <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_1.png" alt="">
+                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div></a></div>
+            <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_1.png" alt="">
+                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div></a></div>
+            <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_1.png" alt="">
+                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div></a></div>
+            <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_1.png" alt="">
+                <div class="text">Часто нам приходится выезжать в тихие дворы и оформлять неудачную парковку того или иного автолюбителя. Практически 100% таких случаев обходится без участия ГИБДД и без особых эмоций.</div></a></div>
           </div>
         </div>
         <div class="example_card_1_pagination"></div>
-        <div class="main_title">Примеры восстановления авто после ДТП</div>
+        <div class="main_title" id="accident">Примеры восстановления авто после ДТП</div>
         <div class="main_description">
            База наших комиссаров – это территория нашего же автосервиса с мощных кузовным цехом. Причем авторемонт не придаток Службы, успешное автономное предприятие, в котором мы обслуживаем и клиентов «50-50-50». Конечно, ремонт после ДТП в нашем сервсие только по Вашему желанию.</div>
         <div class="card_wrapper d-flex flex-wrap">
