--- a/html/index.html
+++ b/html/index.html
@@ -84,32 +84,17 @@
         <p>Чтобы правильно оформить ДТП следуйте инструкции:</p>
         <div class="swiper index_card_1 accident_in"> 
           <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="accident_card"> <span class="circle"></span><span class="number">1</span>
-                <p>Заглушите двигатель и не меняйте положение автомобиля.</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="accident_card"> <span class="circle"></span><span class="number">2</span>
-                <p>Включите аварийную сигнализацию.</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="accident_card"> <span class="circle"></span><span class="number">3</span>
-                <p>Выставьте знак аварийной остановки на 15 метров от ДТП.</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="accident_card"> <span class="circle"></span><span class="number">4</span>
+            <div class="swiper-slide"><a class="accident_card" href="#"> <span class="circle"></span><span class="number">1</span>
+                <p>Заглушите двигатель и не меняйте положение автомобиля.</p></a></div>
+            <div class="swiper-slide"><a class="accident_card" href="#"> <span class="circle"></span><span class="number">2</span>
+                <p>Включите аварийную сигнализацию.</p></a></div>
+            <div class="swiper-slide"><a class="accident_card" href="#"> <span class="circle"></span><span class="number">3</span>
+                <p>Выставьте знак аварийной остановки на 15 метров от ДТП.</p></a></div>
+            <div class="swiper-slide"><a class="accident_card" href="#"> <span class="circle"></span><span class="number">4</span>
                 <p>
-                   Вызовите аварийного комиссара позвонив на <br><a href="#">50-50-50</a>. </p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="accident_card"> <span class="circle"></span><span class="number">5</span>
-                <p>Далее следуйте подсказкам полученым от нашего оператора.</p>
-              </div>
-            </div>
+                   Вызовите аварийного комиссара позвонив на <br><span>50-50-50</span>. </p></a></div>
+            <div class="swiper-slide"><a class="accident_card" href="#"> <span class="circle"></span><span class="number">5</span>
+                <p>Далее следуйте подсказкам полученым от нашего оператора.</p></a></div>
           </div>
         </div>
         <div class="scheme_work_3_pagination"></div>
@@ -186,70 +171,46 @@
       <div class="cards_in index_card_in">
         <h2 class="cards_in_title">Услуги аварийного комиссара в Калининграде служба «50-50-50»</h2>
         <div class="swiper-wrapper"> 
-          <div class="swiper-slide">
-            <div class="card_item"> <img class="card_img" src="./images/prices_card_1.png" alt="">
+          <div class="swiper-slide"><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_1.png" alt="">
               <div class="card_text"> 
                 <div class="text_title">Выезд аварийного комиссара <br> на место ДТП</div>
                 <div class="text_subtitle">Бесплатно</div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="card_item"> <img class="card_img" src="./images/prices_card_2.png" alt="">
+              </div></a></div>
+          <div class="swiper-slide"><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_2.png" alt="">
               <div class="card_text"> 
                 <div class="text_title">Фото и видеофиксация места ДТП</div>
                 <div class="text_subtitle">Бесплатно при заказе оформления</div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="card_item"> <img class="card_img" src="./images/prices_card_3.png" alt="">
+              </div></a></div>
+          <div class="swiper-slide"><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_3.png" alt="">
               <div class="card_text"> 
                 <div class="text_title">Консультация и оформление ДТП</div>
                 <div class="text_subtitle">900 рублей</div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="card_item"> <img class="card_img" src="./images/prices_card_4.png" alt="">
+              </div></a></div>
+          <div class="swiper-slide"><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_4.png" alt="">
               <div class="card_text"> 
                 <div class="text_title">Эвакуация авто с места ДТП</div>
                 <div class="text_subtitle">Бесплатно</div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="card_item"> <img class="card_img" src="./images/prices_card_5.png" alt="">
+              </div></a></div>
+          <div class="swiper-slide"><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_5.png" alt="">
               <div class="card_text"> 
                 <div class="text_title">Подготовка документов для обращения в страховую компанию</div>
                 <div class="text_subtitle">От  1 000 рублей</div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="card_item"> <img class="card_img" src="./images/prices_card_6.png" alt="">
+              </div></a></div>
+          <div class="swiper-slide"><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_6.png" alt="">
               <div class="card_text"> 
                 <div class="text_title">Юридическое сопровождение по последствиям ДТП</div>
                 <div class="text_subtitle">От  1 000 рублей</div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="card_item"> <img class="card_img" src="./images/prices_card_7.png" alt="">
+              </div></a></div>
+          <div class="swiper-slide"><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_7.png" alt="">
               <div class="card_text"> 
                 <div class="text_title">Независимая экспертиза повреждений автомобиля</div>
                 <div class="text_subtitle">От 4 000 рублей</div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="card_item"> <img class="card_img" src="./images/prices_card_8.png" alt="">
+              </div></a></div>
+          <div class="swiper-slide"><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_8.png" alt="">
               <div class="card_text"> 
                 <div class="text_title">Ремонт автомобиля после ДТП</div>
                 <div class="text_subtitle">В зависимости от повреждений</div>
-              </div>
-            </div>
-          </div>
+              </div></a></div>
         </div>
       </div>
       <div class="scheme_work_4_pagination"></div>
@@ -291,13 +252,9 @@
         <div class="tab d-flex justify-content-center align-items-center"><a class="active" href="#">Работа аваркомов</a><a href="#">Ремонт после ДТП </a></div>
         <div class="swiper card_1 card_end"> 
           <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="card_content"> <img src="./images/example_slide_11.png" alt="">
-                <div class="text">Часто бывает, что даже из-за мелких царапин водители не могут договориться самостоятельно, тогда по помощь приходит (приезжает) наш человек. Если без ГИБДД нельзя, то вызовем из нужного района.</div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="card_content"> <img src="./images/example_slide_22.png" alt="">
+            <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_11.png" alt="">
+                <div class="text">Часто бывает, что даже из-за мелких царапин водители не могут договориться самостоятельно, тогда по помощь приходит (приезжает) наш человек. Если без ГИБДД нельзя, то вызовем из нужного района.</div></a></div>
+            <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_22.png" alt="">
                 <div class="text">
                    Совместная работа с ГИБДД, скорой
                   и участниками ДТП. Эвакуированы
@@ -305,14 +262,9 @@
                   виновным признано. В последствии
                   оценка ущерба и помощь в
                   «выбивании» КАСКО за «тотал».
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="card_content"> <img src="./images/example_slide_33.png" alt="">
-                <div class="text"> Оформлено без лишних эмоций и без привлечения ГИБДД по европротоколу. Нас вызвал виновник, при оформлении вину признал. Эвакуация, помощь со страховой, ремонт на нашем СТО.                                </div>
-              </div>
-            </div>
+                </div></a></div>
+            <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_33.png" alt="">
+                <div class="text"> Оформлено без лишних эмоций и без привлечения ГИБДД по европротоколу. Нас вызвал виновник, при оформлении вину признал. Эвакуация, помощь со страховой, ремонт на нашем СТО.                                </div></a></div>
           </div>
         </div>
         <div class="example_card_1_pagination"></div>
@@ -351,12 +303,12 @@
                Наберите с мобильного <span>55-25-11 </span>– это телефон дежурной части ГИБДД Центрального района Калининграда.</p><a href="#">Вызвать ГИБДД </a>
           </div>
           <div class="index_card"> 
-            <h4>Как вызывать ГИБДД?</h4>
+            <h4>Как вызывать Скорую?</h4>
             <p>
                В Калининграде вызвать скорую медицинскую помощь с мобильного телефона можно по единому номеру <span>103.</span></p><a href="#">Вызвать Скорую</a>
           </div>
           <div class="index_card"> 
-            <h4>Как вызывать ГИБДД?</h4>
+            <h4>Сколько стоят услуги?</h4>
             <p>
                Выезд нашего аварийного комиссара на место ДТП с Вашим участием бесплатный. Стоимость комплексной помощи в фиксации и оформлении европротокола (когда ДТП оформляется без участия ГИБДД) – 900 рублей.</p><a href="#">Уточнить все цены</a>
           </div>
@@ -369,6 +321,25 @@
            Обращаясь в службу помощи при ДТП «50-50-50», вы получаете квалифицированную помощь независимо от степени тяжести аварии. Наши сотрудники готовы предложить свои услуги на любом этапе оформления документов и решения необходимых вопросов. Всего через 15 минут после звонка, к вам прибудет специалист, эксперт по ДТП. Если вы <span>арендовали авто в Калининграде</span>и попали на нем в ДТП - звоните! Мы поможем и в таком случае, чтобы владельцы автопроката вас не провели.</p>
         <p>
            Нередко случаются ситуации, когда авария незначительная и без пострадавших, но при этом стороны не могут прийти к соглашению, кто виновен. Чтобы не привлекать дорожную инспекцию к ситуации, стоит обратиться к аварийному комиссару. Опытный специалист проведет оценку ситуации и проработает все дорожные улики и свидетельства. Таким образом, будет установлен ущерб, причиненным сторонам. Проще говоря, такой спецпосредник поможет сторонам в конце концов справедливо договориться.</p>
+      </div>
+      <div class="bottom_text_media"> 
+        <h2 class="main_title">Стиль и размер h2-заголовка</h2>
+        <p class="description">Идейные соображения высшего порядка, а также сложившаяся структура организации в значительной степени обуславливает создание существенных финансовых и административных условий. Повседневная практика показывает, что рамки и место обучения кадров требуют определения и уточнения существенных финансовых и административных условий.</p>
+        <h3 class="main_title_2">Стиль и размер h3-заголовка</h3>
+        <p class="description">Значимость этих проблем настолько очевидна, что рамки и место обучения кадров требуют определения и уточнения новых предложений. Таким образом сложившаяся структура организации требуют определения и уточнения модели развития.</p>
+        <h4 class="description title">Стиль маркированного списка:</h4>
+        <div class="ul"> 
+          <p class="li">—  Значимость этих проблем настолько очевидна</p>
+          <p class="li">—  Разнообразный и богатый опыт</p>
+          <p class="li">—  Ссоответствует насущным потребностям</p>
+        </div>
+        <h4 class="description title">Стиль нумерованного списка:</h4>
+        <div class="ol">
+          <p class="li">1. Значимость этих проблем настолько очевидна</p>
+          <p class="li">2. Разнообразный и богатый опыт</p>
+          <p class="li">3. Ссоответствует насущным потребностям</p>
+        </div>
+        <p class="description last">Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.</p>
       </div>
     </div>
     <footer class="footer"> 
