--- a/html/journal.html
+++ b/html/journal.html
@@ -83,43 +83,31 @@
               </div>
             </section>
       <div class="main_container">
-        <div class="journal_cards d-flex flex-wrap align-items-start">
-          <div class="card_item"> <img src="./images/journal_card.png" alt="">
+        <div class="journal_cards d-flex flex-wrap align-items-start"><a class="card_item" href="#"> <img src="./images/journal_card.png" alt="">
             <div class="card_item_body"> 
               <div class="date">20.11.2020</div>
               <div class="card_description">Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в Калининграде о порядке.</div>
-            </div>
-          </div>
-          <div class="card_item"> <img src="./images/journal_card.png" alt="">
+            </div></a><a class="card_item" href="#"> <img src="./images/journal_card.png" alt="">
             <div class="card_item_body"> 
               <div class="date">20.11.2020</div>
               <div class="card_description">Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в</div>
-            </div>
-          </div>
-          <div class="card_item"> <img src="./images/journal_card.png" alt="">
+            </div></a><a class="card_item" href="#"> <img src="./images/journal_card.png" alt="">
             <div class="card_item_body"> 
               <div class="date">20.11.2020</div>
               <div class="card_description">Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в</div>
-            </div>
-          </div>
-          <div class="card_item"> <img src="./images/journal_card.png" alt="">
+            </div></a><a class="card_item" href="#"> <img src="./images/journal_card.png" alt="">
             <div class="card_item_body"> 
               <div class="date">20.11.2020</div>
               <div class="card_description">Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в Калининграде о порядке.</div>
-            </div>
-          </div>
-          <div class="card_item"> <img src="./images/journal_card.png" alt="">
+            </div></a><a class="card_item" href="#"> <img src="./images/journal_card.png" alt="">
             <div class="card_item_body"> 
               <div class="date">20.11.2020</div>
               <div class="card_description">Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в</div>
-            </div>
-          </div>
-          <div class="card_item"> <img src="./images/journal_card.png" alt="">
+            </div></a><a class="card_item" href="#"> <img src="./images/journal_card.png" alt="">
             <div class="card_item_body"> 
               <div class="date">20.11.2020</div>
               <div class="card_description">Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в</div>
-            </div>
-          </div>
+            </div></a>
         </div>
       </div>
     </div>
