--- a/html/magazine.html
+++ b/html/magazine.html
@@ -88,17 +88,17 @@
         <p class="img_bottom_img">Так должна подписываться фотография на бздячей подложке</p>
         <h3>Стиль и размер h3-заголовка</h3>
         <p class="magazine_bottom_text">Значимость этих проблем настолько очевидна, что рамки и место обучения кадров требуют определения и уточнения новых предложений. Таким образом сложившаяся структура организации требуют определения и уточнения модели развития.</p><span class="magazine_list_title">Стиль маркированного списка:</span>
-        <ul> 
-          <li>—  Значимость этих проблем настолько очевидна</li>
-          <li>—  Разнообразный и богатый опыт</li>
-          <li>—  Ссоответствует насущным потребностям</li>
-        </ul><span class="magazine_list_title">Стиль нумерованного списка:</span>
-        <ol> 
-          <li>1. Значимость этих проблем настолько очевидна</li>
-          <li>2. Разнообразный и богатый опыт</li>
-          <li>3. Ссоответствует насущным потребностям</li>
-        </ol>
-        <p>Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.</p>
+        <div class="ul"> 
+          <p class="li">—  Значимость этих проблем настолько очевидна</p>
+          <p class="li">—  Разнообразный и богатый опыт</p>
+          <p class="li">—  Ссоответствует насущным потребностям</p>
+        </div><span class="magazine_list_title">Стиль нумерованного списка:</span>
+        <div class="ol"> 
+          <p class="li">1. Значимость этих проблем настолько очевидна</p>
+          <p class="li">2. Разнообразный и богатый опыт</p>
+          <p class="li">3. Ссоответствует насущным потребностям</p>
+        </div>
+        <p class="last">Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.</p>
       </div>
     </div>
     <footer class="footer"> 
