--- a/html/price.html
+++ b/html/price.html
@@ -91,17 +91,17 @@
           <h3 class="main_title_2">Стиль и размер h3-заголовка</h3>
           <p class="description">Значимость этих проблем настолько очевидна, что рамки и место обучения кадров требуют определения и уточнения новых предложений. Таким образом сложившаяся структура организации требуют определения и уточнения модели развития.</p>
           <h4 class="description title">Стиль маркированного списка:</h4>
-          <ul> 
-            <li>—  Значимость этих проблем настолько очевидна</li>
-            <li>—  Разнообразный и богатый опыт</li>
-            <li>—  Ссоответствует насущным потребностям</li>
-          </ul>
+          <div class="ul"> 
+            <p class="li">—  Значимость этих проблем настолько очевидна</p>
+            <p class="li">—  Разнообразный и богатый опыт</p>
+            <p class="li">—  Ссоответствует насущным потребностям</p>
+          </div>
           <h4 class="description title">Стиль нумерованного списка:</h4>
-          <ol>
-            <li>Значимость этих проблем настолько очевидна</li>
-            <li>Разнообразный и богатый опыт</li>
-            <li>Ссоответствует насущным потребностям</li>
-          </ol>
+          <div class="ol">
+            <p class="li">1. Значимость этих проблем настолько очевидна</p>
+            <p class="li">2. Разнообразный и богатый опыт</p>
+            <p class="li">3. Ссоответствует насущным потребностям</p>
+          </div>
           <p class="description last">Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.</p>
         </div>
         <div class="text_right">
@@ -119,7 +119,7 @@
               <p class="data_name">Оформление документов для ГИБДД</p><span class="data_value">2 000 руб.</span>
             </div>
           </div>
-          <div class="main_title_2">Другие наши услуги</div>
+          <div class="main_title_2 links_title">Другие наши услуги</div>
           <ul class="links"> 
             <li> <a href="#">Фото и видеофиксация ДТП </a></li>
             <li> <a href="#">Консультация и оформление ДТП </a></li>
