--- a/html/prices.html
+++ b/html/prices.html
@@ -82,56 +82,39 @@
                    50-50-50</div>
               </div>
             </section>
-      <div class="main_container cards d-flex flex-wrap align-items-start">
-        <div class="card_item"> <img class="card_img" src="./images/prices_card_1.png" alt="">
+      <div class="main_container cards d-flex flex-wrap align-items-start"><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_1.png" alt="">
           <div class="card_text"> 
             <div class="text_title">Выезд аварийного комиссара <br> на место ДТП</div>
             <div class="text_subtitle">Бесплатно</div>
-          </div>
-        </div>
-        <div class="card_item"> <img class="card_img" src="./images/prices_card_2.png" alt="">
+          </div></a><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_2.png" alt="">
           <div class="card_text"> 
             <div class="text_title">Фото и видеофиксация места ДТП</div>
             <div class="text_subtitle">Бесплатно при заказе оформления</div>
-          </div>
-        </div>
-        <div class="card_item"> <img class="card_img" src="./images/prices_card_3.png" alt="">
+          </div></a><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_3.png" alt="">
           <div class="card_text"> 
             <div class="text_title">Консультация и оформление ДТП</div>
             <div class="text_subtitle">900 рублей</div>
-          </div>
-        </div>
-        <div class="card_item"> <img class="card_img" src="./images/prices_card_4.png" alt="">
+          </div></a><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_4.png" alt="">
           <div class="card_text"> 
             <div class="text_title">Эвакуация авто с места ДТП</div>
             <div class="text_subtitle">Бесплатно</div>
-          </div>
-        </div>
-        <div class="card_item"> <img class="card_img" src="./images/prices_card_5.png" alt="">
+          </div></a><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_5.png" alt="">
           <div class="card_text"> 
             <div class="text_title">Подготовка документов для обращения в страховую компанию</div>
             <div class="text_subtitle">От  1 000 рублей</div>
-          </div>
-        </div>
-        <div class="card_item"> <img class="card_img" src="./images/prices_card_6.png" alt="">
+          </div></a><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_6.png" alt="">
           <div class="card_text"> 
             <div class="text_title">Юридическое сопровождение по последствиям ДТП</div>
             <div class="text_subtitle">От  1 000 рублей</div>
-          </div>
-        </div>
-        <div class="card_item"> <img class="card_img" src="./images/prices_card_7.png" alt="">
+          </div></a><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_7.png" alt="">
           <div class="card_text"> 
             <div class="text_title">Независимая экспертиза повреждений автомобиля</div>
             <div class="text_subtitle">От 4 000 рублей</div>
-          </div>
-        </div>
-        <div class="card_item"> <img class="card_img" src="./images/prices_card_8.png" alt="">
+          </div></a><a class="card_item" href="#"> <img class="card_img" src="./images/prices_card_8.png" alt="">
           <div class="card_text"> 
             <div class="text_title">Ремонт автомобиля после ДТП</div>
             <div class="text_subtitle">В зависимости от повреждений</div>
-          </div>
-        </div>
-      </div>
+          </div></a></div>
     </div>
     <footer class="footer"> 
       <div class="main_container"> 
