--- a/html/rates.html
+++ b/html/rates.html
@@ -88,8 +88,8 @@
             <div class="card_title">Минимум</div>
             <div class="card_subtitle">Только оформление</div>
             <ul class="sucsess"> 
-              <li> <img src="./images/success_icon.svg" alt=""><span>Выезд на место ДТП</span></li>
-              <li> <img src="./images/success_icon.svg" alt=""><span>Фото и видеофиксация ДТП</span></li>
+              <li class="top_title"><img src="./images/success_icon.svg" alt=""><span>Выезд на место ДТП</span></li>
+              <li class="top_title"><img src="./images/success_icon.svg" alt=""><span>Фото и видеофиксация ДТП</span></li>
               <li> <img src="./images/success_icon.svg" alt=""><span>Консультация и оформление ДТП</span></li>
               <li class="title title_1">Только европротокол:</li>
               <li>900 рублей — город</li>
@@ -105,9 +105,9 @@
             <div class="card_title">Стандарт</div>
             <div class="card_subtitle">Только оформление и эвакуация</div>
             <ul class="sucsess"> 
-              <li> <img src="./images/success_icon.svg" alt=""><span>Выезд на место ДТП</span></li>
-              <li> <img src="./images/success_icon.svg" alt=""><span>Фото и видеофиксация ДТП</span></li>
-              <li> <img src="./images/success_icon.svg" alt=""><span>Консультация и оформление ДТП</span></li>
+              <li class="top_title"><img src="./images/success_icon.svg" alt=""><span>Выезд на место ДТП</span></li>
+              <li class="top_title"><img src="./images/success_icon.svg" alt=""><span>Фото и видеофиксация ДТП</span></li>
+              <li class="top_title"><img src="./images/success_icon.svg" alt=""><span>Консультация и оформление ДТП</span></li>
               <li class="title_1"> <img src="./images/success_icon.svg" alt=""><span>Эвакуация авто с места ДТП в пределах города</span></li>
               <li>Тариф «Минимум»</li>
               <li>+</li>
@@ -124,13 +124,13 @@
             <div class="card_title">Максимум</div>
             <div class="card_subtitle">Подразумевает комплексную помощь и заключение договора</div>
             <ul class="sucsess"> 
-              <li> <img src="./images/success_icon.svg" alt=""><span>Выезд на место ДТП</span></li>
-              <li> <img src="./images/success_icon.svg" alt=""><span>Фото и видеофиксация ДТП</span></li>
-              <li> <img src="./images/success_icon.svg" alt=""><span>Консультация и оформление ДТП</span></li>
-              <li> <img src="./images/success_icon.svg" alt=""><span>Эвакуация авто с места ДТП для клиентов нашего сервиса</span></li>
-              <li> <img src="./images/success_icon.svg" alt=""><span>Подготовка документов для обращения в страховую компанию</span></li>
-              <li> <img src="./images/success_icon.svg" alt=""><span>Юридическое сопровождение по последствиям ДТП</span></li>
-              <li> <img src="./images/success_icon.svg" alt=""><span>Независимая экспертиза повреждений автомобиля</span></li>
+              <li class="top_title"><img src="./images/success_icon.svg" alt=""><span>Выезд на место ДТП</span></li>
+              <li class="top_title"><img src="./images/success_icon.svg" alt=""><span>Фото и видеофиксация ДТП</span></li>
+              <li class="top_title"><img src="./images/success_icon.svg" alt=""><span>Консультация и оформление ДТП</span></li>
+              <li class="top_title"><img src="./images/success_icon.svg" alt=""><span>Эвакуация авто с места ДТП для клиентов нашего сервиса</span></li>
+              <li class="top_title"><img src="./images/success_icon.svg" alt=""><span>Подготовка документов для обращения в страховую компанию</span></li>
+              <li class="top_title"><img src="./images/success_icon.svg" alt=""><span>Юридическое сопровождение по последствиям ДТП</span></li>
+              <li class="top_title"><img src="./images/success_icon.svg" alt=""><span>Независимая экспертиза повреждений автомобиля</span></li>
               <li class="title_3"> <img src="./images/success_icon.svg" alt=""><span>Ремонт автомобиля после ДТП *</span></li>
               <li>От 4 900 рублей</li>
             </ul><a class="link" href="#"> <img src="./images/card_phone_icon.svg" alt=""><span>50-50-50</span></a>
